[project]
name = "signalfx-python-fork"
version = "1.0.0"
authors = [
  { name="Shoukoo", email="author@example.com" },
]
description = "A fork of signalfx-python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/shoukoo/signalfx-python-fork"
Issues = "https://github.com/shoukoo/signalfx-python-fork"
